[package]
name = "jack_recorder"
version = "0.1.0"
edition = "2021"
authors = ["Miha Valencic"]
description = "JACK audio recorder"

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
crossbeam-channel = "0.5.2"
ctrlc = { version = "3.0", features = ["termination"] }
jack = "0.9.2"
hound = "3.4.0"
chrono = "0.4.19"
log = "0.4.16"
simple-logging = "2.0.2"