[package]
name = "jack_recorder"
version = "0.1.0"
edition = "2021"
authors = ["Miha Valencic"]
description = "JACK audio recorder"

[dependencies]
chrono = { version= "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
crossbeam-channel = "0.5.4"
ctrlc = { version = "3.2.2", features = ["termination"] }
hound = "3.4.0"
jack = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
simple-logging = "2.0.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
zip = { version = "0.6.2", default-features = false }